security/UX audit fixes: RBAC, CORS, rate-limit, download tokens, a11y, refactor
Backend:
- Admin panel role guard parity confirmed server-side (@PreAuthorize + URL rules)
- CORS restored to origin whitelist (was wildcard)
- Actuator endpoints (except health/info) now require ADMIN role
- Rate limiting extended to activation-codes, backup, and payment endpoints
- Backup ZIP downloads now use a short-lived, download-scoped JWT instead of
  the long-lived session token in the URL query string
- Documented the /api/v1 vs /api/v2 versioning convention (docs/API_VERSIONING.md)
- Removed dead commented-out CORS code

Admin frontend:
- RoleGuard added to Users/Questions/Topics/Packages/Tickets routes
- Native confirm() replaced with Mantine confirm modal in Agreements
- Applications table now paginated
- Backup/License/LearningCenters pages split from single 900-1000 line files
  into per-component files under components/ (behavior unchanged)
- aria-label added to icon-only action buttons; hardcoded hex colors moved to
  Mantine CSS variables; breadcrumb navigation added to the layout

User frontend:
- aria-label added to icon-only nav/action buttons
- Hardcoded gradient colors moved to Mantine CSS variables
- Removed unused logo.png asset (dead weight, superseded by logo.svg)
- FAQ JSON-LD now escapes "<" to prevent premature </script> termination
- Fixed a pre-existing TS build error in Downloads/index.tsx (unknown && JSX)

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>